--- a/Synthesis.AspNetCore.Security.Middleware/Synthesis.AspNetCore.Security.Middleware.csproj
+++ b/Synthesis.AspNetCore.Security.Middleware/Synthesis.AspNetCore.Security.Middleware.csproj
@@ -2,7 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <Version>1.0.0.0</Version>
+    <Company>Prysm, Inc.</Company>
+    <Copyright>Copyright © Prysm, Inc. 2020</Copyright>
+    <BuildId Condition=" '$(BuildId)' == '' ">0</BuildId>
+    <Version>1.0.0.$(BuildId)</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
